Script output working correctly

--- a/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
@@ -192,4 +192,13 @@
   .dialog-pane .button:pressed {
     -fx-background-color: #161b22; }
 
+.console_output {
+  -fx-fill: #b8b8b8; }
+
+.console_input {
+  -fx-fill: #005f3c; }
+
+.console_error {
+  -fx-fill: #b00020; }
+
 /*# sourceMappingURL=../../../../../../target/styles.css.map */
