--- a/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
@@ -199,6 +199,7 @@
   -fx-fill: #005f3c; }
 
 .console_error {
-  -fx-fill: #b00020; }
+  -fx-fill: #b00020;
+  }
 
 /*# sourceMappingURL=../../../../../../target/styles.css.map */
