--- a/src/main/sass/_variables.scss
+++ b/src/main/sass/_variables.scss
@@ -1,11 +1,11 @@
-$bg-dark: #0d1117;
-$bg-main: #161b22;
-$bg-light: #21262d;
+$bg-dark: #1a1a1a;
+$bg-main: #252525;
+$bg-light: #323232;
 $bg-lightest: #30363d;
 $bg-elevated: #1c2128;
 
-$text-primary: #f0f6fc;
-$text-secondary: #7d8590;
+$text-primary: #dddddd;
+$text-secondary: #b0b0b0;
 $text-muted: #656d76;
 
 $accent: #238636;
@@ -13,7 +13,7 @@ $accent-hover: #2ea043;
 $accent-secondary: #1f6feb;
 $accent-danger: #da3633;
 
-$border: #30363d;
+$border: #363636;
 $border-light: #424a53;
 $border-subtle: #21262d;
 
