--- a/src/main/sass/_codearea.scss
+++ b/src/main/sass/_codearea.scss
@@ -27,9 +27,8 @@
 
 .line-number-box {
   -fx-background-color: $bg-main;
-  -fx-border-color: $border;
-  -fx-border-width: 0 1 0 0;
-  -fx-padding: 2 8 2 5;
+  -fx-border-width: 0;
+  -fx-padding: 0;
 }
 
 .line-number-text {
