--- a/src/main/sass/_base.scss
+++ b/src/main/sass/_base.scss
@@ -2,7 +2,7 @@
 
 .root {
   -fx-background-color: $bg-main;
-  -fx-font-family: "Segoe UI", "SF Pro Display", "Helvetica Neue", sans-serif;
+  //-fx-font-family: "Segoe UI", "SF Pro Display", "Helvetica Neue", sans-serif;
   -fx-font-size: 13px;
 }
 
@@ -51,7 +51,6 @@
 .context-menu {
   -fx-background-color: $bg-dark;
   -fx-border-color: $border;
-  -fx-font-size: 16;
   -fx-border-width: 1;
   -fx-background-radius: $radius-sm;
   -fx-border-radius: $radius-sm;
@@ -59,9 +58,25 @@
   -fx-padding: 0;
 }
 
+.console-context-menu {
+  -fx-font-size: 16;
+}
+
+.separator {
+  -fx-background-color: #363636;
+  -fx-padding: 0;
+}
+
+.separator .line {
+  -fx-border-color: #363636;
+  -fx-border-width: 1 0 0 0;
+  -fx-border-insets: 0;
+}
+
 .button {
   -fx-background-color: $accent;
   -fx-text-fill: white;
+  -fx-font-family: $font-family;
   -fx-font-weight: 600;
   -fx-padding: 6 16 6 16;
   -fx-background-radius: $radius-sm;
