--- a/src/main/sass/_codearea.scss
+++ b/src/main/sass/_codearea.scss
@@ -5,7 +5,7 @@
   -fx-text-fill: $text-primary;
   -fx-border-color: $border;
   -fx-border-width: 1;
-  -fx-font-family: "Consolas", "Monaco", "Courier New", monospace;
+  -fx-font-family: $font-family;
   -fx-font-size: 14px;
 
   .virtual-flow {
@@ -33,11 +33,15 @@
 
 .line-number-text {
   -fx-text-fill: $text-secondary;
-  -fx-font-family: "Consolas", "Monaco", "Courier New", monospace;
+  -fx-font-family: $font-family;
 }
 
 .caret {
     -fx-stroke: $text-primary;
+}
+
+.code-font {
+  -fx-font-family: "JetBrains Mono Medium";
 }
 
 .keyword {
