--- a/src/main/sass/_variables.scss
+++ b/src/main/sass/_variables.scss
@@ -24,3 +24,5 @@ $shadow-strong: rgba(0, 0, 0, 0.36);
 $radius-sm: 6px;
 $radius-md: 8px;
 $radius-lg: 12px;
+
+$font-family: "JetBrains Mono Medium";
