--- a/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
+++ b/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.input.KeyCodeCombination?>
@@ -35,11 +36,19 @@
                         </MenuItem>
                             </items>
                         </Menu>
-                        <Menu mnemonicParsing="false" text="Edit">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
-                            </items>
-                        </Menu>
+                  <Menu mnemonicParsing="false" text="Edit">
+                     <items>
+                        <MenuItem fx:id="undo" mnemonicParsing="false" text="Undo" />
+                        <MenuItem fx:id="redo" mnemonicParsing="false" text="Redo" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="cut" mnemonicParsing="false" text="Cut" />
+                        <MenuItem fx:id="copy" mnemonicParsing="false" text="Copy" />
+                        <MenuItem fx:id="paste" mnemonicParsing="false" text="Paste" />
+                        <MenuItem fx:id="delete" mnemonicParsing="false" text="Delete" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem fx:id="selectAll" mnemonicParsing="false" text="Select All" />
+                     </items>
+                  </Menu>
                         <Menu mnemonicParsing="false" text="About">
                             <items>
                                 <MenuItem fx:id="menuitemThisProject" mnemonicParsing="false" text="This project" />
@@ -48,7 +57,7 @@
                     </menus>
                 </MenuBar>
                 <Region prefHeight="0.0" prefWidth="200.0" />
-                <Button fx:id="runBtn" mnemonicParsing="false" text="Run Script" />
+                <Button fx:id="runBtn" mnemonicParsing="false" text="Run" />
             </children>
         </HBox>
     </top>
