--- a/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
@@ -93,26 +93,28 @@
 .scroll-bar {
   -fx-background-color: transparent; }
   .scroll-bar .thumb {
-    -fx-background-color: #30363d;
+    -fx-background-color: #323232;
     -fx-background-radius: 4; }
-    .scroll-bar .thumb:hover {
-      -fx-background-color: #424a53; }
   .scroll-bar .track {
     -fx-background-color: transparent; }
   .scroll-bar .increment-button, .scroll-bar .decrement-button {
     -fx-background-color: transparent;
-    -fx-padding: 0; }
+    -fx-padding: 0;
+    -fx-pref-width: 0;
+    -fx-pref-height: 0; }
   .scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
     -fx-shape: "";
     -fx-padding: 0; }
 
 .scroll-bar:vertical {
-  -fx-padding: 2 0 2 0; }
+  -fx-padding: 2 0 2 0;
+  -fx-pref-width: 14; }
   .scroll-bar:vertical .thumb {
     -fx-background-insets: 0 2 0 2; }
 
 .scroll-bar:horizontal {
-  -fx-padding: 0 2 0 2; }
+  -fx-padding: 0 2 0 2;
+  -fx-pref-height: 14; }
   .scroll-bar:horizontal .thumb {
     -fx-background-insets: 2 0 2 0; }
 
