--- a/src/main/sass/_codearea.scss
+++ b/src/main/sass/_codearea.scss
@@ -28,7 +28,7 @@
 .line-number-box {
   -fx-background-color: $bg-main;
   -fx-border-width: 0;
-  -fx-padding: 0;
+  -fx-padding: 0 0 0 10;
 }
 
 .line-number-text {
