--- a/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
+++ b/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -16,7 +16,7 @@
     <top>
         <HBox BorderPane.alignment="CENTER">
             <children>
-                <MenuBar prefHeight="25.0" prefWidth="151.0">
+                <MenuBar minWidth="151.0" prefHeight="25.0" prefWidth="151.0">
                     <menus>
                         <Menu mnemonicParsing="false" text="File">
                             <items>
@@ -56,8 +56,12 @@
                         </Menu>
                     </menus>
                 </MenuBar>
-                <Region prefHeight="0.0" prefWidth="200.0" />
-                <Button fx:id="runBtn" mnemonicParsing="false" text="Run" />
+                <Region prefHeight="34.0" prefWidth="127.0" />
+                <Button fx:id="runBtn" defaultButton="true" mnemonicParsing="false" text="  Run  " />
+            <Region prefHeight="34.0" prefWidth="15.0" />
+            <Button fx:id="stopBtn" cancelButton="true" minWidth="36.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="65.0" styleClass="stop-button" text="Stop" />
+            <Region prefHeight="34.0" prefWidth="454.0" />
+            <Label fx:id="lineStatus" minWidth="30.0" prefHeight="34.0" prefWidth="17.0" text="1:3" />
             </children>
         </HBox>
     </top>
@@ -65,11 +69,7 @@
         <SplitPane dividerPositions="0.561122244488978" prefHeight="500.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
             <items>
                 <BorderPane fx:id="codeBP" />
-            <BorderPane fx:id="consoleBP">
-               <center>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-               </center>
-            </BorderPane>
+            <BorderPane fx:id="consoleBP" />
             </items>
         </SplitPane>
     </center>
