--- a/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
+++ b/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
@@ -56,12 +56,12 @@
                         </Menu>
                     </menus>
                 </MenuBar>
-                <Region prefHeight="34.0" prefWidth="127.0" />
+            <Region prefHeight="34.0" prefWidth="34.0" />
+            <Label fx:id="lineStatus" minWidth="30.0" prefHeight="34.0" prefWidth="34.0" styleClass="text-secondary" text="1:1" textAlignment="CENTER" />
+                <Region prefHeight="34.0" prefWidth="96.0" />
                 <Button fx:id="runBtn" defaultButton="true" mnemonicParsing="false" text="  Run  " />
             <Region prefHeight="34.0" prefWidth="15.0" />
             <Button fx:id="stopBtn" cancelButton="true" minWidth="36.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="65.0" styleClass="stop-button" text="Stop" />
-            <Region prefHeight="34.0" prefWidth="454.0" />
-            <Label fx:id="lineStatus" minWidth="30.0" prefHeight="34.0" prefWidth="17.0" text="1:3" />
             </children>
         </HBox>
     </top>
