--- a/src/main/sass/_special.scss
+++ b/src/main/sass/_special.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .stop-button {
   -fx-background-color: #8a3232;
 
@@ -8,4 +10,8 @@
   &:selected {
     -fx-background-color: #cd0e0e;
   }
+}
+
+.text-secondary {
+  -fx-text-fill: $text-secondary;
 }
