--- a/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
@@ -124,6 +124,31 @@
 .text-area .content {
   -fx-background-color: #1a1a1a; }
 
+.choice-box {
+  -fx-background-color: #252525;
+  -fx-border-color: #21262d;
+  -fx-border-width: 1;
+  -fx-border-radius: 6px;
+  -fx-background-radius: 6px;
+  -fx-padding: 2 8 2 8; }
+  .choice-box:hover {
+    -fx-border-color: #363636; }
+
+.choice-box .label {
+  -fx-text-fill: #dddddd;
+  -fx-font-size: 12px; }
+
+.choice-box .arrow {
+  -fx-background-color: #b0b0b0; }
+
+.choice-box .arrow-button {
+  -fx-background-color: transparent;
+  -fx-padding: 0 4 0 4; }
+
+.choice-box .context-menu {
+  -fx-background-color: #1a1a1a;
+  -fx-border-color: #363636; }
+
 .code-area {
   -fx-background-color: #252525;
   -fx-text-fill: #dddddd;
@@ -154,29 +179,6 @@
 
 .code-font {
   -fx-font-family: "JetBrains Mono Medium"; }
-
-.keyword {
-  -fx-fill: #328ccc;
-  -fx-font-weight: bold; }
-
-.string {
-  -fx-fill: #3ca375; }
-
-.function {
-  -fx-fill: #6dbdff; }
-
-.annotation {
-  -fx-fill: #BBB529; }
-
-.number {
-  -fx-fill: #6869bb; }
-
-.default_text {
-  -fx-fill: #A9B7C6; }
-
-.comment {
-  -fx-fill: #808080;
-  -fx-font-style: italic; }
 
 .dialog-pane {
   -fx-background-color: #1a1a1a;
