--- a/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
+++ b/src/main/resources/fili5rovic/scriptexecutor/fxml/main.fxml
@@ -59,7 +59,7 @@
                 </MenuBar>
             <Region prefHeight="34.0" prefWidth="34.0" />
             <Label fx:id="lineStatus" minWidth="30.0" prefHeight="34.0" prefWidth="34.0" styleClass="text-secondary" text="1:1" textAlignment="CENTER" />
-            <ChoiceBox minHeight="34.0" minWidth="100.0" />
+            <ChoiceBox fx:id="themeChoiceBox" minHeight="34.0" minWidth="100.0" />
                 <Region prefHeight="34.0" prefWidth="96.0" />
                 <Button fx:id="runBtn" defaultButton="true" mnemonicParsing="false" text="  Run  " />
             <Region prefHeight="34.0" prefWidth="15.0" />
