--- a/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/styles.css
@@ -180,6 +180,9 @@
 .code-font {
   -fx-font-family: "JetBrains Mono Medium"; }
 
+.default_text {
+  -fx-fill: #A9B7C6; }
+
 .dialog-pane {
   -fx-background-color: #1a1a1a;
   -fx-border-color: #363636;
