Added interpolation highlighting support in MySyntaxHighlighter and updated theme styles for interpolation in CSS and SCSS files

--- a/src/main/resources/fili5rovic/scriptexecutor/css/codeThemes/codearea-theme-darcula-purple.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/codeThemes/codearea-theme-darcula-purple.css
@@ -21,4 +21,7 @@
   -fx-fill: #6272a4;
   -fx-font-style: italic; }
 
+.interpolation {
+  -fx-fill: #A9B7C6; }
+
 /*# sourceMappingURL=../../../../../../../target/codeThemes/codearea-theme-darcula-purple.css.map */
