--- a/src/main/resources/fili5rovic/scriptexecutor/css/codeThemes/codearea-theme-github-dark.css
+++ b/src/main/resources/fili5rovic/scriptexecutor/css/codeThemes/codearea-theme-github-dark.css
@@ -21,4 +21,7 @@
   -fx-fill: #8b949e;
   -fx-font-style: italic; }
 
+.interpolation {
+  -fx-fill: #A9B7C6; }
+
 /*# sourceMappingURL=../../../../../../../target/codeThemes/codearea-theme-github-dark.css.map */
